2006-04-29  Titus Brown  <t@issola.caltech.edu>

	* Added (re-added!?) test-wsgi-intercept.py test.

	* 'execute_string' no longer resets context, unlike 'execute_file'.

	* Fixed a few miscellaneous problems with argparse.get_args; added
	  optional 'require' argument to get_args.

	* added 'interactive' flag to twill.shell; turned off verbose
	  output for 'extend_with' command if not interactive.

2006-04-24  Titus Brown  <t@issola.caltech.edu>

	* Added csv_iterate module.

	* Fixed argparse to use $arg1...$argN instead of $arg0.

2006-04-23  Titus Brown  <t@issola.caltech.edu>

	* Fixed argparse to listen to arguments after '--' only.

	* Updated 'problems.txt' again with a Windows-specific 'tidy'
	  problem.  (aledain)

	* Refactored '_all_the_same...' code by moving it into utils.py.

	* browser.get_form() now checks for exact match to form ID.
	  (Uy Do)

	* browser.get_form_field() now checks for exact match to control ID
	  (Uy Do)

	* Updated ClientCookie to latest svn.

	* Added another weird form parsing error: </br> problems in forms.
	  (David Hancock)

	* Verified issue with ParseErrors caused by INPUTs in the wrong
	  place.  Put in test-broken-html.  Cannot fix easily... <sigh>
	  (Tomi Hautakoski)

	* Fixed wsgi_intercept/write_fn issue.

2006-04-13  Titus Brown  <t@issola.caltech.edu>

	* Changed 'save_html' to default to deriving the filename from the
	  URL (Tristan De Buysscher).

2006-03-30  Titus Brown  <t@issola.caltech.edu>

	* Added redirect_error, reset_error to commands.py, and
	  added function 'twill.set_errout'.

	* Added '-n', '--never-fail' option to 'twill-sh'.

	* Fixed a problem with ClientForm.AmbiguityError being raised in
	  bad places.

	* Updated ClientForm to latest.

2006-03-26  Titus Brown  <t@issola.caltech.edu>

	* Updated dns_check with Bob Halley's suggestions.

	* Added docs & (fragile) tests to the dns_check extension module.

	* Added dns_check.py extension module.  No docs/tests yet.
