@@ -20,10 +20,57 @@ def simple_app(environ, start_response):
     
     return ['WSGI intercept successful!\n']
 
+def write_app(environ, start_response):
+    """Test the 'write_fn' legacy stuff."""
+    status = '200 OK'
+    response_headers = [('Content-type','text/plain')]
+    write_fn = start_response(status, response_headers)
+
+    global _app_was_hit
+    _app_was_hit = True
+    
+    write_fn('WSGI intercept successful!\n')
+    return []
+
+class wrapper_app:
+    """
+    Test some tricky generator stuff in wsgi_intercept.
+    """
+    def __init__(self, app):
+        self.app = app
+
+    def __call__(self, environ, start_response):
+        generator = self.app(environ, start_response)
+        
+        for i in generator:
+            yield i
+
 def test_intercept():
     global _app_was_hit
+    _app_was_hit = False
 
     twill.add_wsgi_intercept('localhost', 80, lambda: simple_app)
+    assert not _app_was_hit
+    twill.commands.go('http://localhost:80/')
+    twill.commands.find("WSGI intercept successful")
+    assert _app_was_hit
+    twill.remove_wsgi_intercept('localhost', 80)
+
+def test_wrapper_intercept():
+    """
+    This tests a tricky wsgi_intercept interaction between the 'write' fn
+    passed back from the start_response function in WSGI, and the generator
+    data yielded from the initial app call.
+
+    See wsgi_intercept.py, section containing 'generator_data', for more
+    info.
+    """
+    global _app_was_hit
+    _app_was_hit = False
+
+    wrap_app = wrapper_app(write_app)
+
+    twill.add_wsgi_intercept('localhost', 80, lambda: wrap_app)
     assert not _app_was_hit
     twill.commands.go('http://localhost:80/')
     twill.commands.find("WSGI intercept successful")
