@@ -1,3 +1,9 @@
+2006-05-07  Titus Brown  <t@issola.caltech.edu>
+
+	* Fixed wsgi_intercept generator problem, added test.
+
+	* Fixed a reference to an absolute URL in the tests.
+
 2006-04-29  Titus Brown  <t@issola.caltech.edu>
 
 	* Added (re-added!?) test-wsgi-intercept.py test.
